fix spacing

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,7 +1,8 @@
 .article {
   background-color: var(--black-04);
-  border-bottom: 1px solid var(--red);
-  border-top: 1px solid var(--red);
+  /* border-bottom: 1px solid var(--red);
+  border-top: 1px solid var(--red); */
+  border-left: 1px solid var(--red);
   box-shadow: 0 1px 8px 0 rgb(0 0 0 / 20%), 0 3px 4px 0 rgb(0 0 0 / 14%),
     0 3px 3px -2px rgb(0 0 0 / 12%);
   padding: 1.5rem;
