--- a/src/pages/events.module.css
+++ b/src/pages/events.module.css
@@ -1,5 +1,5 @@
 .section {
-  padding: 6rem 1rem;
+  padding: 0 1rem 6rem;
 }
 
 .p {
@@ -13,7 +13,7 @@
 
 @media (min-width: 576px) {
   .section {
-    padding: 6rem 2rem;
+    padding: 0 2rem 6rem;
   }
 }
 
